[package]
name = "gfx_scene_meta"
version = "0.0.1"
license = "Apache-2.0"
keywords = ["graphics", "gamedev"]
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "gfx_scene_meta"

[dependencies.draw_queue]
path = "src/queue"

[dependencies.gfx_phase]
path = "src/phase"

[dependencies.gfx_scene]
path = "src/scene"

[dev_dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dev_dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dev_dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"
plugin = true

[dev_dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl"

[dev_dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[[example]]
name = "alpha"
path = "examples/alpha/main.rs"
