[package]
name = "gfx_scene_meta"
version = "0.0.2"
description = "Meta package for high-level rendering libraries on gfx-rs"
homepage = "https://github.com/gfx-rs/gfx_scene"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]

[lib]
name = "gfx_scene_meta"

[dependencies.draw_queue]
path = "src/queue"

[dependencies.gfx_phase]
path = "src/phase"

[dependencies.gfx_scene]
path = "src/scene"

[dev_dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dev_dependencies.draw_state]
git = "https://github.com/gfx-rs/draw_state"

[dev_dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dev_dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dev_dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx_window_glutin"


[[example]]
name = "alpha"
path = "examples/alpha/main.rs"

[[example]]
name = "beta"
path = "examples/beta/main.rs"
