[package]
name = "gfx_scene_meta"
version = "0.0.5"
description = "Meta package for high-level rendering libraries on gfx-rs"
homepage = "https://github.com/gfx-rs/gfx_scene"
keywords = ["graphics", "gamedev"]
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]

[lib]
name = "gfx_scene_meta"

[dependencies.draw_queue]
path = "src/queue"

[dependencies.gfx_phase]
path = "src/phase"

[dependencies.gfx_scene]
path = "src/scene"

[dev-dependencies]
cgmath = "0.4"
collision = "0.4"
gfx = "0.8"
glutin = "0.4"
gfx_window_glutin = "0.7"
hprof = "0.1"

[[example]]
name = "alpha"
path = "examples/alpha/main.rs"

[[example]]
name = "beta"
path = "examples/beta/main.rs"
