[package]
name = "gfx_phase"
version = "0.5.0"
description = "Render phase abstraction for gfx-rs"
license = "Apache-2.0"
authors = ["The Gfx-rs Developers"]

[lib]
name = "gfx_phase"
path = "lib.rs"

[dependencies.draw_queue]
path = "../queue"
version = "0.1"

[dependencies]
log = "*"
gfx = "0.7"
hprof = "0.1"
